feat: ES의 정렬을 유지하는 기능 추가